# CUADRANTES

./: .dockerignore  .gitignore  Dockerfile  INICIO_RAPIDO.md  Procfile  README.md  construir_exe.bat  ejecutar.bat  ejecutar.sh  ejecutar_movil.bat  ejecutar_tunel.bat  fly.toml  importar_agosto_2026.py  importar_historico_2026.py  main.py  pyproject.toml  render.yaml  requirements-web.txt  requirements.txt
.github/workflows/: oro-alertas.yml
cuadrantes/: rutas.py  servicio.py
cuadrantes/config/: configuracion.py  constantes.py
cuadrantes/datos/: base_datos.py  datos_iniciales.py  modelos.py  repositorios.py
cuadrantes/dominio/: calendario.py  computos.py  festivos_espana.py  historico.py
cuadrantes/exportacion/: excel.py  facturacion.py  pdf.py
cuadrantes/informes/: generador.py
cuadrantes/interfaz/: aplicacion.py  asistente.py  gestor_ausencias.py  gestor_festivos.py  gestor_trabajadores.py  graficos.py  panel_configuracion.py  tema.py  ventana_principal.py  vista_calendario.py  vista_facturacion.py
cuadrantes/motor/: optimizador.py
cuadrantes/programador/: planificador.py
cuadrantes/validacion/: auditoria.py
cuadrantes/web/: app.py
cuadrantes/web/estaticos/: estilo.css
docs/: ACCESO_SIN_NUBE.md  ARQUITECTURA.md  ARQUITECTURA_ORO.md  DESPLIEGUE.md  INSTALACION.md  MANTENIMIENTO.md  MANUAL_USUARIO.md  USO_MOVIL.md
oro/: DESPLIEGUE_MOVIL.md  README.md  alerta.py  cli.py  requirements.txt
oro/datos/: __init__.py
oro/deploy/: render.yaml
oro/tests/: test_sentimiento_vivo.py
oro/vivo/: gestor.py  runner.py
tests/: test_optimizador.py
(+6 files in other folders)
