[project]
name = "cuadrantes-seguridad"
version = "1.0.0"
description = "Generador automático de cuadrantes mensuales de seguridad privada"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Propietario" }
authors = [{ name = "Departamento de Planificación de Seguridad Privada" }]
dependencies = [
    "ortools>=9.8",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "PySide6>=6.6",
    "APScheduler>=3.10",
]

[project.scripts]
cuadrantes = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
